# comfyui-xishen

./: LICENSE  README.md  __init__.py  pyproject.toml  smart_display_node.py  说明.txt
.trae/rules/: project_rules.md
nodes/: batch_size_control_node.py  prompt_edit_node.py  prompt_node.py  qwen_bloom_effect.py  qwen_camera_preset.py  qwen_grain_effect.py  qwen_light_preset.py  qwen_size_preset.py  random_number_node.py  shutdown_timer_advanced_node.py  shutdown_timer_node.py  smart_display_node.py  theme_prompt_node.py
web/extensions/: xishen-prompt-edit-ui.js  xishen-resolution-ui.js  xishen-smart-display-ui.js  xishen-theme-prompt-ui.js  xishen_prompts.json  xishen_random_integer_ui.js  xishen_theme_prompts.json
